# qpi

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  PLAN.md  README.md  REVIEW_ACTIONS_2026-03-02.md  alembic.ini  deployment_optimization.md  pyproject.toml  requirements.txt
.github/: actionlint.yaml  dependabot.yml
apps/support-bot/upstream/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt  ruff.toml
apps/support-bot/upstream/.github/: dependabot.yml
apps/support-bot/upstream/.github/workflows/: ci.yml
apps/support-bot/upstream/app/: __main__.py  config.py
apps/support-bot/upstream/app/bot/: commands.py  manager.py  newsletter.py  postgres_smoke.py  storage.py  support_context.py  support_metadata.py  support_runtime.py  support_topics.py  telegram_client.py
apps/support-bot/upstream/app/bot/handlers/: __init__.py  errors.py
apps/support-bot/upstream/app/bot/handlers/group/: __init__.py  callback_query.py  command.py  message.py  template.py
apps/support-bot/upstream/app/bot/handlers/private/: __init__.py  callback_query.py  command.py  message.py  my_chat_member.py  windows.py
apps/support-bot/upstream/app/bot/llm/: __init__.py  base.py  openai_compatible.py
apps/support-bot/upstream/app/bot/middlewares/: __init__.py  album.py  manager.py  redis.py  throttling.py
apps/support-bot/upstream/app/bot/policy/: __init__.py  actions.py  context.py  decision.py  engine.py  loader.py  matchers.py  schema.py
apps/support-bot/upstream/app/bot/types/: album.py
apps/support-bot/upstream/app/bot/utils/: create_forum_topic.py  exceptions.py  policy_runtime.py  texts.py
apps/support-bot/upstream/app/bot/utils/redis/: __init__.py  models.py  redis.py
apps/support-bot/upstream/config/: policy.example.yaml  system_prompt.example.txt
apps/support-bot/upstream/scripts/: migrate_redis_to_pg.py
apps/support-bot/upstream/src/: db.ts  files.ts  handlers.ts  interfaces.ts  metrics.ts  middleware.ts  resendOrphanTickets.ts  supportContext.ts  text.ts  users.ts
apps/support-bot/upstream/src/addons/: fakectx.ts
apps/support-bot/upstream/src/addons/signal/: mapper.ts
apps/support-bot/upstream/src/addons/telegram/: index.ts
apps/support-bot/upstream/test/: commands.test.ts  files.test.ts  resend-orphan-tickets.test.ts  support-context.test.ts  text-handler.test.ts  text.test.ts  users.test.ts
apps/support-bot/upstream/tests/llm/: test_factory.py  test_provider.py
apps/support-bot/upstream/tests/policy/: test_actions.py  test_engine.py  test_loader.py  test_matchers.py
apps/support-bot/upstream/tests/qpi/: test_group_service_messages.py  test_lifecycle_controls.py  test_media_forwarding.py  test_optional_capabilities.py  test_runtime_bootstrap.py  test_russian_delivery.py  test_support_context.py
docs/: architecture.md  backlog.md  dev_workflow.md
infra/: main.tf  outputs.tf  providers.tf  serverless.tf  support_bot.tf  support_bot_outputs.tf  support_bot_variables.tf  terraform.tfvars.example  variables.tf  versions.tf
libs/: __init__.py
migrations/: env.py
schema/: empty.sql  schema.sql
services/: __init__.py
tests/: conftest.py  db_integration_manifest.txt  e2e_harness.py  helpers.py  migration_smoke_manifest.txt  schema_compat_manifest.txt  test_admin_exceptions_flow.py  test_blockchain_checker_phase8.py  (+38 more)
(+125 files in other folders)
