[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpi"
version = "0.1.0"
description = "QPI backend foundation"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2,<4.0",
  "psycopg-pool>=3.2,<4.0",
  "pydantic-settings>=2.7,<3.0",
  "structlog>=25.1,<26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.9,<1.0",
  "mypy>=1.15,<2.0",
]

[project.scripts]
qpi-bot-api = "services.bot_api.main:cli"
qpi-worker = "services.worker.main:cli"
qpi-db-schema = "libs.db.schema_cli:cli"

[tool.setuptools.packages.find]
include = ["libs*", "services*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
