[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpi"
version = "0.1.0"
description = "QPI backend foundation"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2,<4.0",
  "psycopg-pool>=3.2,<4.0",
  "pydantic-settings>=2.7,<3.0",
  "structlog>=25.1,<26.0",
  "python-telegram-bot[webhooks]>=21.10,<22.0",
  "yc_json_logger @ git+https://github.com/e-comet/yc_json_logger.git@882b8a6880d7726f03db145d4d6935a0b26294df",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.9,<1.0",
  "mypy>=1.15,<2.0",
]

[project.scripts]
qpi-bot-api = "services.bot_api.main:cli"
qpi-worker = "services.worker.main:cli"
qpi-daily-report-scrapper = "services.daily_report_scrapper.main:cli"
qpi-order-tracker = "services.order_tracker.main:cli"
qpi-blockchain-checker = "services.blockchain_checker.main:cli"
qpi-db-schema = "libs.db.schema_cli:cli"

[tool.setuptools.packages.find]
include = ["libs*", "services*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
  "migration_smoke: destructive schema apply/drop smoke; requires RUN_MIGRATION_SMOKE=1 and disposable *_test DB",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
