[project]
name = "qpi-support-bot"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2,<4.0",
    "aiohttp-socks>=0.11.0",
    "apscheduler>=3.10,<4.0",
    "asyncpg>=0.29,<1.0",
    "cachetools>=7.1,<8.0",
    "openai>=2.37,<3.0",
    "pydantic>=2.13,<3.0",
    "pyyaml>=6.0,<7.0",
    "redis>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
qpi-support-bot = "app.__main__:cli"

[dependency-groups]
dev = [
    "mypy>=1.15,<2.0",
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=1.3,<2.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
ignore_missing_imports = true
